# SoundDecisions

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.md  PI_review_guidance.markdown  PROGRESS_SUMMARY_2026-06-10.md  RELEASE_NOTES.md  critic.md  pyproject.toml  requirements.txt  tests_full.log.sha256
configs/: alpha_grid.json  axes.json  coarse_class_map.json  dataset.json  schedule.json  thresholds.json
experiment/: EXPERIMENT_PLAN.md  EXPERIMENT_PLAN_EXEC.md  LONG_RANGE_EXPERIMENT_PLAN _June_13th.md  LONG_RANGE_EXPERIMENT_PLAN.md  LONG_RANGE_EXPERIMENT_PLAN_revised.md  experiment_pack.json
foley_cw/: README.md  __init__.py  agreement.py  arc4_b1.py  arc4_gpu.py  axes.py  axis_spec_contract.py  b1_lineage.py  b2_class_closure.py  b2_feature_recollection.py  b2_inventory_merge.py  bridge.py  cfg_dial.py  class_internal_readout.py  class_probes.py  commitment.py  cond_features.py  condition_swap.py  config.py  dataset.py  determination.py  feature_tap.py  foleybench_extract.py  gap.py  gate_a.py  internal_probes.py  kernel_provenance.py  labeling_tool.py  material_reference_feasibility.py  measurers_panns_cnn14.py  mllm_judge.py  mmaudio_backend.py  model_adapter.py  policy_offline.py  probes.py  readout.py  real_measurer.py  real_perturbations.py  reliability.py  reporting.py  (+12 more)
orbit-research/: ALGORITHMIC_FORMALIZATION.md  COMPONENT_BUNDLE_LADDER.md  CONTROL_DESIGN.md  DIAGNOSTIC_EXPERIMENT_PLAN.md  DIAGNOSTIC_TO_REVIEW_STATE.json  MODE_ROUTING.md  NULL_RESULT_CONTRACT.md  ORBIT_STATE.json  PIPELINE_SUMMARY.md  PLAN_CODE_AUDIT.md  PROPOSAL_REVISE_STATE.json  (+2 more)
(+482 files in other folders)
