[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "foley_cw"
version = "0.1.0"
description = "Foley Commitment/Readout Windows in V2A flow generation (foley-cw)"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jsonschema>=4.18"]

[tool.setuptools]
packages = ["foley_cw", "foley_cw.cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
